--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test app</title>
-</head>
-<body>
-<div id="app"></div>
-<script src="index.js"></script>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <title>Reacteroids</title>
+    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <div id='app'>
+    </div>
+    <script src="/static/bundle.js"></script>
+  </body>
 </html>
