--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Reacteroids</title>
-    <link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+    <title>React docker</title>
   </head>
   <body>
     <div id='app'>
